// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dotplot legend should render with score type where larger scores are better 1`] = `
<svg
  height="250"
  id="legend"
  viewBox="0 0 200 250"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <linearGradient
      id="legendGradient"
    >
      <stop
        offset="0%"
        stopColor="#ffffff"
      />
      <stop
        offset="50%"
        stopColor="#ff0000"
      />
      <stop
        offset="100%"
        stopColor="#000000"
      />
    </linearGradient>
  </defs>
  <g>
    <text
      textAnchor="middle"
      x="100"
      y="20"
    >
      Abundance
    </text>
    <rect
      fill="url('#legendGradient')"
      height="20"
      width="150"
      x="25"
      y="30"
    />
    <text
      textAnchor="middle"
      x="25"
      y="65"
    >
      0
    </text>
    <text
      textAnchor="middle"
      x="175"
      y="65"
    >
      50
    </text>
  </g>
  <g>
    <circle
      cx="60"
      cy="100"
      fill="#000000"
      r="6"
    />
    <circle
      cx="135"
      cy="100"
      fill="#000000"
      r="12"
    />
    <line
      fill="none"
      stroke="#000000"
      strokeWidth="1"
      x1="70"
      x2="119"
      y1="100"
      y2="100"
    />
    <polygon
      fill="#000000"
      points="110,96 112,100 110,104 119,100"
    />
    <text
      fontSize="12"
      textAnchor="middle"
      x="100"
      y="130"
    >
      Relative abundance
    </text>
  </g>
  <g>
    <text
      textAnchor="middle"
      x="100"
      y="230"
    >
      Score
    </text>
    <circle
      cx="50"
      cy="175"
      fill="none"
      r="12"
      stroke="#000000"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="50"
      y="205"
    >
      ≥
       
      0.01
    </text>
    <circle
      cx="100"
      cy="175"
      fill="none"
      r="12"
      stroke="#ff0000"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="100"
      y="205"
    >
      ≥
       
      0.05
    </text>
    <circle
      cx="150"
      cy="175"
      fill="none"
      r="12"
      stroke="#ffffff"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="150"
      y="205"
    >
      &lt;
       
      0.05
    </text>
  </g>
</svg>
`;

exports[`Dotplot legend should render with score type where smaller scores are better 1`] = `
<svg
  height="250"
  id="legend"
  viewBox="0 0 200 250"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <linearGradient
      id="legendGradient"
    >
      <stop
        offset="0%"
        stopColor="#ffffff"
      />
      <stop
        offset="50%"
        stopColor="#ff0000"
      />
      <stop
        offset="100%"
        stopColor="#000000"
      />
    </linearGradient>
  </defs>
  <g>
    <text
      textAnchor="middle"
      x="100"
      y="20"
    >
      Abundance
    </text>
    <rect
      fill="url('#legendGradient')"
      height="20"
      width="150"
      x="25"
      y="30"
    />
    <text
      textAnchor="middle"
      x="25"
      y="65"
    >
      0
    </text>
    <text
      textAnchor="middle"
      x="175"
      y="65"
    >
      50
    </text>
  </g>
  <g>
    <circle
      cx="60"
      cy="100"
      fill="#000000"
      r="6"
    />
    <circle
      cx="135"
      cy="100"
      fill="#000000"
      r="12"
    />
    <line
      fill="none"
      stroke="#000000"
      strokeWidth="1"
      x1="70"
      x2="119"
      y1="100"
      y2="100"
    />
    <polygon
      fill="#000000"
      points="110,96 112,100 110,104 119,100"
    />
    <text
      fontSize="12"
      textAnchor="middle"
      x="100"
      y="130"
    >
      Relative abundance
    </text>
  </g>
  <g>
    <text
      textAnchor="middle"
      x="100"
      y="230"
    >
      Score
    </text>
    <circle
      cx="50"
      cy="175"
      fill="none"
      r="12"
      stroke="#000000"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="50"
      y="205"
    >
      ≤
       
      0.01
    </text>
    <circle
      cx="100"
      cy="175"
      fill="none"
      r="12"
      stroke="#ff0000"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="100"
      y="205"
    >
      ≤
       
      0.05
    </text>
    <circle
      cx="150"
      cy="175"
      fill="none"
      r="12"
      stroke="#ffffff"
      strokeWidth="2"
    />
    <text
      textAnchor="middle"
      x="150"
      y="205"
    >
      &gt;
       
      0.05
    </text>
  </g>
</svg>
`;
